Change mobile menu toggle color to #800020

--- a/styles.css
+++ b/styles.css
@@ -3401,7 +3401,7 @@ footer {
     display: none;
     background: none;
     border: none;
-    color: white;
+    color: #800020;
     font-size: 2em;
     cursor: pointer;
     padding: 10px;
